Update project version in cmake, minor tweaks to readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,17 +50,21 @@ if(POLICY CMP0074)
 	cmake_policy(SET CMP0074 NEW)
 endif(POLICY CMP0074)
 
-project(RmlUi C CXX)
+project(RmlUi LANGUAGES C CXX VERSION 3.0)
+
+set(RMLUI_VERSION_RELEASE false)
+
+if(RMLUI_VERSION_RELEASE)
+	set(RMLUI_VERSION_SUFFIX "")
+else()
+	set(RMLUI_VERSION_SUFFIX "-dev")
+endif()
+
+set(RMLUI_VERSION_SHORT ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}${RMLUI_VERSION_SUFFIX})
+add_compile_definitions(RMLUI_VERSION="${RMLUI_VERSION_SHORT}")
 
 # paths
 include(GNUInstallDirs)
-
-set(RMLUI_VERSION_MAJOR 3)
-set(RMLUI_VERSION_MINOR 0)
-set(RMLUI_VERSION_PATCH 0)
-set(RMLUI_VERSION_TWEAK "-dev")
-set(PROJECT_VERSION ${RMLUI_VERSION_MAJOR}.${RMLUI_VERSION_MINOR}.${RMLUI_VERSION_PATCH}${RMLUI_VERSION_TWEAK})
-add_compile_definitions(RMLUI_VERSION="${PROJECT_VERSION}")
 
 # Search in the 'cmake' directory for additional CMake modules.
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake;${PROJECT_SOURCE_DIR}/CMake/Modules)
@@ -228,7 +232,7 @@ foreach(library ${LIBRARIES})
 
 	set_target_properties(${NAME} PROPERTIES
 	   VERSION ${PROJECT_VERSION}
-	   SOVERSION ${RMLUI_VERSION_MAJOR}
+	   SOVERSION ${PROJECT_VERSION_MAJOR}
 	)
 	
 	if (MSVC)
@@ -284,7 +288,7 @@ else(NOT BUILD_FRAMEWORK)
 
 	set_target_properties(${NAME} PROPERTIES
 		VERSION ${PROJECT_VERSION}
-		SOVERSION ${RMLUI_VERSION_MAJOR}
+		SOVERSION ${PROJECT_VERSION_MAJOR}
 	)
 
 	set_property(SOURCE ${MASTER_PUB_HDR_FILES}
@@ -303,7 +307,7 @@ else(NOT BUILD_FRAMEWORK)
 		FRAMEWORK TRUE
 		FRAMEWORK_VERSION ${PROJECT_VERSION}
 		MACOSX_FRAMEWORK_IDENTIFIER com.rmlui.${NAME}
-		MACOSX_FRAMEWORK_SHORT_VERSION_STRING ${RMLUI_VERSION_MAJOR}.${RMLUI_VERSION_MINOR}.${RMLUI_VERSION_PATCH}.${RMLUI_VERSION_TWEAK}
+		MACOSX_FRAMEWORK_SHORT_VERSION_STRING ${RMLUI_VERSION_SHORT}
 		MACOSX_FRAMEWORK_BUNDLE_VERSION ${PROJECT_VERSION}
 		XCODE_ATTRIBUTE_INSTALL_PATH "@rpath"
 		PUBLIC_HEADER ${MASTER_PUB_HDR_FILES}
@@ -334,7 +338,7 @@ if(BUILD_LUA_BINDINGS)
 
 		set_target_properties(${NAME} PROPERTIES
 		   VERSION ${PROJECT_VERSION}
-		   SOVERSION ${RMLUI_VERSION_MAJOR}
+		   SOVERSION ${PROJECT_VERSION_MAJOR}
 		)
 
 		set_property(TARGET ${NAME} PROPERTY CXX_STANDARD 14)
