CMake OpenGL policy, see #68.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,9 @@ endif(COMMAND cmake_policy)
 if(POLICY CMP0042)
 	cmake_policy(SET CMP0042 NEW)
 endif(POLICY CMP0042)
+if (POLICY CMP0072)
+	cmake_policy (SET CMP0072 NEW)
+endif(POLICY CMP0072)
 if(POLICY CMP0074)
 	cmake_policy(SET CMP0074 NEW)
 endif(POLICY CMP0074)
