--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ endif(POLICY CMP0074)
 
 project(RmlUi LANGUAGES C CXX VERSION 3.1)
 
-set(RMLUI_VERSION_RELEASE false)
+set(RMLUI_VERSION_RELEASE true)
 
 if(RMLUI_VERSION_RELEASE)
 	set(RMLUI_VERSION_SUFFIX "")
