Fix linking with GLEW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -535,7 +535,7 @@ endif(NOT BUILD_FRAMEWORK)
 			message("-- Can SDL2 sample be built - yes")
 			include_directories(${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
 
-			bl_sample(sdl2 ${sample_LIBRARIES}  ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${GLEW_LIBRARY})
+			bl_sample(sdl2 ${sample_LIBRARIES}  ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${GLEW_LIBRARIES})
 			set_property(TARGET sdl2 PROPERTY CXX_STANDARD 14)
 			set_property(TARGET sdl2 PROPERTY CXX_STANDARD_REQUIRED ON)
 		
@@ -569,7 +569,7 @@ endif(NOT BUILD_FRAMEWORK)
 			message("-- Can SFML 2.x sample be built - yes: with GLEW")
 			include_directories(${SFML_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
 			add_definitions( -DENABLE_GLEW )
-			bl_sample(sfml2 ${sample_LIBRARIES} ${SFML_LIBRARIES} ${GLEW_LIBRARY})
+			bl_sample(sfml2 ${sample_LIBRARIES} ${SFML_LIBRARIES} ${GLEW_LIBRARIES})
 		else()
 			message("-- Can SFML 2.x sample be built - yes: without GLEW")
 			include_directories(${SFML_INCLUDE_DIR})
