Travis: Add warning and pedantic compilation flags

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: false
 dist: bionic
 language: c++
+env:
+  global:
+    - CXXFLAGS="-pedantic -Wall"
+
 cache: 
   apt: true
   directories:
