Fix mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,10 @@ if(NO_FONT_INTERFACE_DEFAULT)
 	add_definitions(-DRMLUI_NO_FONT_INTERFACE_DEFAULT)
 endif()
 
+if (WIN32)
+	add_definitions(-DWIN32)
+endif(WIN32)
+
 if(NOT BUILD_SHARED_LIBS)
 	add_definitions(-DRMLUI_STATIC_LIB)
 	message("-- Building static libraries. Make sure to #define RMLUI_STATIC_LIB before including RmlUi in your project.")
@@ -447,6 +451,10 @@ macro(bl_sample NAME)
 	endif()
 
 	target_link_libraries(${NAME} ${ARGN})
+
+	if (WIN32)
+		target_link_libraries(${NAME} shlwapi)
+	endif()
 endmacro()
 
 if(BUILD_SAMPLES)
