CMake option for enabling benchmarks in Tests. Add benchmark for creation and destruction of elements. Refactor geometry database tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 	
 	if(BUILD_TESTING)
 		set(RMLUI_TESTS_ENABLED ON)
+		option(ENABLE_BENCHMARKS "Will enable benchmarks while running Tests." ON)
 	endif()
 endif()
 
