- Add a visual test suite for navigating and comparing formatting of documents for correctness, in particular for testing the layout engine. Includes some examples from the CSS specifications. - A python script for a "best-effort" conversion of the full CSS 2.1 test suite into RML, which you can load into the visual tests suite (see CMake option VISUAL_TESTS_DIRECTORIES). - Split the tests into separate executables: UnitTests, VisualTests, and Benchmarks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,10 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 	
 	if(BUILD_TESTING)
 		set(RMLUI_TESTS_ENABLED ON)
-		option(ENABLE_BENCHMARKS "Will enable benchmarks while running Tests." ON)
+		option(BUILD_UNIT_TESTS "Enable to build UnitTests." ON)
+		option(BUILD_VISUAL_TESTS "Enable to build VisualTests." ON)
+		set(VISUAL_TESTS_DIRECTORIES "" CACHE STRING "Specify additional directories containing *.rml documents for the visual tests. Backslashes must be escaped. Separate multiple directories by semicolon.")
+		option(BUILD_BENCHMARKS "Enable to build Benchmarks." ON)
 	endif()
 endif()
 
