VisualTests: Add comparisons with previous captures, single comparison or for the whole test suite. Writes a diff image if they are not equal.

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -72,6 +72,9 @@ if(BUILD_VISUAL_TESTS)
 	if(VISUAL_TESTS_DIRECTORIES)
 		target_compile_definitions(VisualTests PRIVATE RMLUI_VISUAL_TESTS_DIRECTORIES="${VISUAL_TESTS_DIRECTORIES}")
 	endif()
+	if(VISUAL_TESTS_INPUT_DIRECTORY)
+		target_compile_definitions(VisualTests PRIVATE RMLUI_VISUAL_TESTS_INPUT_DIRECTORY="${VISUAL_TESTS_INPUT_DIRECTORY}")
+	endif()
 	if(VISUAL_TESTS_OUTPUT_DIRECTORY)
 		target_compile_definitions(VisualTests PRIVATE RMLUI_VISUAL_TESTS_OUTPUT_DIRECTORY="${VISUAL_TESTS_OUTPUT_DIRECTORY}")
 	endif()
